samples/_failures_safe/1761070929_f50590_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8dae2531.c: In function ‘main’:
./samples/SAFE/__tmp_8dae2531.c:155:35: error: missing terminating " character
  155 |     const char* names[] = {"BFS", "
      |                                   ^
./samples/SAFE/__tmp_8dae2531.c:155:5: error: expected expression at end of input
  155 |     const char* names[] = {"BFS", "
      |     ^~~~~
./samples/SAFE/__tmp_8dae2531.c:155:5: error: expected declaration or statement at end of input
